test_datas/compile_fail/undefined_function.pgl
package main;

func main() {
    println(not_exist(1));
}
