test_datas/compile_fail/undefined_function.pgl.error
/home/sream/workspace/pangu/test_datas/compile_fail/undefined_function.pgl:4:13: error: undefined function 'not_exist'
    println(not_exist(1));
            ^~~~~~~~~
